--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Time</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    
+    <header id="header">
+        <div class="cabecalho">
+            <div class="container">
+                <div class="imagem">
+                    <img src="img/logo2.png" alt="logo">
+                </div>
+                <p class="nossosQuizes">Nossos Quizes</p>
+            </div>
+        </div>
+    </header>
+
+    <main id="main">
+        <img src="img/logo.png" alt="" style="width: 300px;">
+    </main>
+
     <script src="script.js"></script>
 </body>
+
 </html>
