--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     </header>
 
     <main id="main">
-        <img src="img/logo.png" alt="" style="width: 300px;">
+        <div class="conteudo">
+            <h1>Teste seus conhecimentos</h1>
+            <p class="texto">Preparado para testar suas habilidades e elevar seu aprendizado no ensino médio? Bem-vindo
+                ao Quiz Time, o seu destino online para desafios intelectuais emocionantes!</p>
+                <a href="quiz.html"><button>Quiz Ensino Médio</button></a>
+        </div>
     </main>
 
     <script src="script.js"></script>
