--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
 
     <main id="main">
         <div class="conteudo">
-            <h1>Teste seus conhecimentos</h1>
-            <p class="texto">Preparado para testar suas habilidades e elevar seu aprendizado no ensino médio? Bem-vindo
-                ao Quiz Time, o seu destino online para desafios intelectuais emocionantes!</p>
+            <div class="textos">
+                <h1>Teste seus conhecimentos</h1>
+                <p class="texto">Preparado para testar suas habilidades e elevar seu aprendizado no ensino médio?
+                    Bem-vindo
+                    ao Quiz Time, o seu destino online para desafios intelectuais emocionantes!</p>
                 <a href="quiz.html"><button>Quiz Ensino Médio</button></a>
+            </div>
+            <div class="equipe">
+                <img src="img/equipe.png" alt="equipe">
+            </div>
         </div>
     </main>
 
