--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Time</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/lampada.png">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                 <p class="texto">Preparado para testar suas habilidades e elevar seu aprendizado no ensino médio?
                     Bem-vindo
                     ao Quiz Time, o seu destino online para desafios intelectuais emocionantes!</p>
-                <a href="quiz.html"><button>Quiz Ensino Médio</button></a>
+                <a href="quiz.html"><button id="botao">Quiz Ensino Médio</button></a>
             </div>
             <div class="equipe">
                 <img src="img/equipe.png" alt="equipe">
