--- a/quiz.html
+++ b/quiz.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Ensino Médio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/lampada.png">
 </head>
 <body>
-    
+    <header id="header">
+        <div class="cabecalho">
+            <div class="container">
+                <div class="imagem">
+                    <img src="img/logo2.png" alt="logo">
+                </div>
+                <p class="nossosQuizes">Nossos Quizes</p>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
