--- a/quiz.html
+++ b/quiz.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/lampada.png">
 </head>
-<body>
-    <header id="header">
+<body id="body2">
+    <!-- <header id="header">
         <div class="cabecalho">
             <div class="container">
                 <div class="imagem">
@@ -17,6 +17,26 @@
                 <p class="nossosQuizes">Nossos Quizes</p>
             </div>
         </div>
-    </header>
+    </header> -->
+
+    <main id="segundoMain">
+        <div class="app">
+            <h1>Quiz Ensino Médio</h1>
+            <div class="quiz">
+                <h2 id="questao">Pergunta</h2>
+                <div id="botoesResposta">
+                    <button class="btn">Resposta 1</button>
+                    <button class="btn">Resposta 2</button>
+                    <button class="btn">Resposta 3</button>
+                    <button class="btn">Resposta 4</button>
+                </div>
+                <button id="next-btn">Próximo</button>
+            </div>
+        </div>
+    </main>
+    
+    <script src="script.js"></script>
 </body>
+
+
 </html>
