--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
     <title>Quiz Ensino Médio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/lampada.png">
+    <script src="https://kit.fontawesome.com/65d3d9eac0.js" crossorigin="anonymous"></script>
 </head>
 <body id="body2">
     <!-- <header id="header">
@@ -30,6 +31,7 @@
                     <button class="btn">Resposta 3</button>
                     <button class="btn">Resposta 4</button>
                 </div>
+                
                 <button id="next-btn">Próximo</button>
             </div>
         </div>
