--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
     <main id="segundoMain">
         <div class="app">
             <h1>Quiz Ensino Médio</h1>
+            
             <div class="quiz">
                 <h2 id="questao">Pergunta</h2>
                 <div id="botoesResposta">
@@ -36,6 +37,12 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="final">
+            <p id="pontuacao">Pontuação: 0</p>
+        </div>
+    </footer>
     
     <script src="script.js"></script>
 </body>
