--- a/quiz.html
+++ b/quiz.html
@@ -19,6 +19,11 @@
             </div>
         </div>
     </header> -->
+    <header>
+        <div class="comeco">
+            <p id="pontuacao"><i class="fa-solid fa-award" style="color: #000000;"></i>Pontuação: 0</p>
+        </div>
+    </header>
 
     <main id="segundoMain">
         <div class="app">
@@ -38,11 +43,7 @@
         </div>
     </main>
 
-    <footer>
-        <div class="final">
-            <p id="pontuacao">Pontuação: 0</p>
-        </div>
-    </footer>
+    
     
     <script src="script.js"></script>
 </body>
