Erro na pontuação
Arrumei um erro na pontuação

--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,8 @@
     </header> -->
     <header>
         <div class="comeco">
-            <p id="pontuacao"><i class="fa-solid fa-award" style="color: #000000;"></i>Pontuação: 0</p>
+            <p id="pontuacao">Pontuação: 0</p>         
+            <!-- <i class="fa-solid fa-award" style="color: #000000;"></i> -->
         </div>
     </header>
 
