--- a/quiz.html
+++ b/quiz.html
@@ -19,12 +19,19 @@
             </div>
         </div>
     </header> -->
-    <header>
+    <!-- <header>
         <div class="comeco">
             <p id="pontuacao">Pontuação: 0</p>         
-            <!-- <i class="fa-solid fa-award" style="color: #000000;"></i> -->
+            <i class="fa-solid fa-award" style="color: #000000;"></i>
+        </div>
+    </header> -->
+
+    <header>
+        <div class="comeco">
+            <p id="pontuacao"><i class="fa-solid fa-award" style="color: #000000;"></i> Pontuação: 0</p>
         </div>
     </header>
+    
 
     <main id="segundoMain">
         <div class="app">
